# get_products

./: main.py  setup.py
example/: __init__.py  _native__lib.pyd
screening/: Cargo.toml
screening/data/: input.xlsx  out.csv  ~$input.xlsx
screening/src/: lib.rs  main.rs
